objects/LLC_BI__Index__mdt.object
<CustomObject>
    <description>Financial indices used to better price loans with current market rates. Certain indices are available per product.</description>
    <fields>
        <fullName>LLC_BI__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates this Index is in use.</description>
        <inlineHelpText>Indicates this Index is in use.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Category__c</fullName>
        <description>Category</description>
        <inlineHelpText>Category</inlineHelpText>
        <label>Category</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Description__c</fullName>
        <description>Description</description>
        <inlineHelpText>Description</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__External_Source__c</fullName>
        <description>Default Source URL</description>
        <inlineHelpText>Default Source URL</inlineHelpText>
        <label>Default Source URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Modification_Schedule__c</fullName>
        <description>Update Frequency</description>
        <inlineHelpText>Update Frequency</inlineHelpText>
        <label>Modification Schedule</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Name__c</fullName>
        <description>Index Name</description>
        <inlineHelpText>Index Name</inlineHelpText>
        <label>Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Index</label>
    <pluralLabel>Indices</pluralLabel>
</CustomObject>